--- a/index.html
+++ b/index.html
@@ -4,26 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FizzBuzz</title>
     <!-- custom style -->
     <link rel="stylesheet" href="css/style.css">
-
-    <!-- bootstrap link -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
-        <div class="grid">
-            <div class="row">
-                <div class="col-2 ms-cols text-center p-5 m-2">number</div>
-                <div class="col-2 ms-cols text-center p-5 m-2">number</div>
-                <div class="col-2 ms-cols text-center p-5 m-2">number</div>
-                <div class="col-2 ms-cols text-center p-5 m-2">number</div>
-                <div class="col-2 ms-cols text-center p-5 m-2">number</div>
-                <div class="col-2 ms-cols text-center p-5 m-2">number</div>
-            </div>
-        </div>
-    </div>
+    <div class="container"></div>
 
     <!-- JS script -->
     <script src="js/script.js"></script>
